update select_recipient and edit_body views to use css instead of handlebar helpers (fixes problem with didInsertElement not being called again);  limit visible friends to 6

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-@import "bootstrap"
+@import "bootstrap";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_tree jquery.ui.autocomplete
  */
+.invisible {
+  display: none;
+}
+.visible {
+  display: block;
+}
